Feat: pay ticket
