# app/fiber/swagger/swagger.yaml
@@ -719,6 +719,31 @@ paths:
       - ApiKeyAuth: []
       tags:
       - Tickets
+  /tickets/{id}/pay:
+    put:
+      parameters:
+      - description: Ticket ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Ticket'
+            type: array
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/domain.AppError'
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - Tickets
   /tickets/{id}/products/{productId}:
     delete:
       parameters:
